--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "snapshotsubject",
-  "version": "1.0.0",
+  "name": "@angular-fintech/snapshotsubject",
+  "version": "0.0.1",
   "description": "RxJs SnapShot Replay Subject and other utils",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build-ts": "tsc",
+    "build": "tsc",
     "watch-ts": "tsc -w"
   },
   "repository": {
