--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "declaration": true,
     "esModuleInterop": true,
     "target": "ESNext",
+    "strict": true,
+    "module": "CommonJS",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
@@ -21,5 +23,9 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
